js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/l1.0.kt
internal const konst constKey = "foo"

internal const konst constVal = "2"

